src/app/styl/views/settings_container.styl
.settings-container-contain
    z-index 1
    background-color $BackColor_dark
    height 100%
    width 100%
    position fixed
    padding-top: $TitleHeight + 10px
    #qrcode-modal
            height: 100vh
            width: 100vw
            background: $BackColor_dark
            position: absolute
            left: 0
            top: 0
            z-index: 200
            text-align: center
            canvas
                background: #FFF
                padding: 34px
                border-radius: 15px
                margin-top: 140px
            i
                position absolute
                top: 30px
                right: 30px
                color: #FFF
                font-size: 48px

    .success_alert
        background: #33AA65
        padding: 10px 30px
        border-radius: 30px
        i
            font-size 14px

    .settings-container
        z-index 1
        width 100%
        height 100%
        position absolute
        background-color $BackColor_dark
        -webkit-user-select none
        padding-bottom 20px
        top: 0
        &.show-advanced
            .settings-row
                &.advanced
                    padding 35px 20px !important
                    height: auto !important
                    opacity: 1 !important
                    overflow: none !important
                    transform: scale(1) !important

        .navbar-s
            width: 100%
            margin: 0 auto
            text-align: center

        .nav-tabs
            width auto
            background: transparent
            margin 0 auto
            font-size: 0.9em
            border-bottom: none 0
            display: block
            width 100%
            position absolute
            padding-top 10px
            box-shadow: none
            li
                float: none
                display: inline-block
                a
                    margin 0
                    line-height 1
                    border-radius 0
                    padding 0
                    color #FFF
                &:hover, &.active
                    a
                        background transparent
                        border 0 none

        .tab-content
            scrollable()
            display: block
            width: 100%
            position: absolute
            top: 160px
            bottom: 0px
            .tab-pane
                .title
                    font-family: $TitleFont
                    color: #FFF
                    font-weight: 900
                    padding: 20px
                    text-align: center
                    opacity: .4
                section
                    display block
                    .content
                        max-width: 780px
                        margin: 0 auto
                    .settings-row
                        color: #FFF
                        margin: 0
                        display: block
                        margin: 0 20px
                        overflow: hidden
                        border-bottom 1px solid rgba(225,225,225,0.15)
                        padding 35px 20px
                        transition: all 0.3s ease
                        transition-property: transform, opacity;
                        &.advanced
                            padding: 0
                            opacity: 0
                            height: 0
                            transform: scale(0.75)
                        &:last-child
                            margin-bottom: 50px
                        &:hover
                            background: rgba(200,200,200, 0.15)
                        .text, i, .action-item
                            display: inline-block
                            vertical-align: middle
                        .text
                            font-family: $TitleFont
                            font-size: 18px
                            font-weight: bold
                            line-height: 1em
                            max-width: 52%
                            .helper
                                margin-top: 2px
                                font-family: $MainFont
                                font-weight: normal
                                opacity: 0.4
                                font-size 13px
                        i
                            font-size: 24px
                            margin: 0 20px
                            color: #FFF
                            display: inline-block
                            width: 24px

                        .action-item
                            color: #000
                            float right
                            padding-top 5px
                            select
                            width 130px
                            margin-right 15
                            input[type=text],
                            input[type=number],
                            input[type=password]
                                padding: 5px 10px
                                border-radius 5px
                                color #FFF
                                outline 0
                                border 0
                                font-size  0.95em
                                font-weight normal
                                line-height 0.70em
                                width 140px
                                background $InputBg
                                -webkit-box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.85)
                                transition background .2s ease


                            input[type=text]
                                &.dir-path
                                    width: 225px

                           .switch
                                position: relative
                                display: inline-block
                                width: 36px
                                height: 20px

                                input
                                    display:none

                                .slider
                                    position: absolute
                                    cursor: pointer
                                    top: 0
                                    left: 0
                                    right: 0
                                    bottom: 0
                                    border-radius: 34px
                                    background-color: rgba(250,250,250, 0.25)
                                    -webkit-transition: .3s

                                .slider:before
                                    position: absolute
                                    content: ""
                                    height: 16px
                                    width: 16px
                                    left: 2px
                                    bottom: 2px
                                    background-color: white
                                    border-radius: 50%
                                    -webkit-transition: .3s

                                input:checked + .slider
                                    background-color: $MainColor

                                input:focus + .slider
                                    box-shadow: 0 0 1px rgba(0,0,0,0.5)

                                input:checked + .slider:before
                                    -webkit-transform: translateX(16px)

                            .btn
                                font-family: $TitleFont
                                background: $MainColor
                                color: $Pure_White
                                text-transform: uppercase
                                i
                                    margin: 0 5px 0 0
                                    font-size: 18px

    .success_alert
        z-index: 999
        position fixed
        bottom 25px
        right 50px
        color $Text1
        font-family $MainFont, $AlternateFont
        font-size 16px

        #checkmark-notify
            display inline-block
            width 20px
            height 20px
            transform rotate(45deg)

        #stem-notify
            position absolute
            width 3px
            height 12px
            background-color $Text1
            left 11px
            top 6px

        #kick-notify
            position absolute
            width 6px
            height 3px
            background-color $Text1
            left 6px
            top 15px


.settings-container-contain
    section
        display none
        &#title
            display: block

